# chromeprofile

./: .replit  INSTALLATION.md  README.md  add_test_profile.py  app.js  browser_session_manager.py  browser_sessions.db  build.js  code_for_git.txt  create_python_dist.py  dependencies.txt  electron.js  main.py  main_standalone.py  package-lock.json  package.json  pyproject.toml  replit.nix  run_cli.bat  run_cli.sh  sample_profiles.csv  start_browser_manager.bat  start_desktop_app.bat  start_desktop_app.sh  test_enhanced_browser.py
attached_assets/: Pasted-import-tkinter-as-tk-from-tkinter-import-filedialog-messagebox-scrolledtext-import-csv-import-o-1744275000178.txt
browser_manager/: __init__.py  api.py  driver.py  session.py
extensions/info_display/: content.js  create_icons.py  manifest.json  popup.html  popup.js  styles.css
git_copy_v3/: README.txt  browser_session_manager.py  launch_browser_manager.py  main_standalone.py  sample_profiles.csv
gui/: __init__.py  app.py  components.py
modules/: driver.js  session.js
public/css/: styles.css
public/js/: script.js
python_dist/: browser_session_manager.py  start_browser_manager.sh
uploads/: chromeprofile.csv
utils/: __init__.py  check_db.py  logger.py  session_utils.py  system.py  update_db_schema.py
views/: index.ejs
